--- a/Manuscript Materials/2 Method/Participants.Rmd
+++ b/Manuscript Materials/2 Method/Participants.Rmd
@@ -22,7 +22,6 @@ output:
 library(tidyverse)
 library(knitr)
 
-
 opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, cache = FALSE)
 theme_set(theme_bw() + 
             theme(strip.background = element_blank(), 
@@ -31,7 +30,7 @@ theme_set(theme_bw() +
 
 This script uses the following files:
 ```{r load_data}
-demos <- read.csv("~/Box/May I Grab Your Attention/Data/ProcessedData/final_demographics.csv") 
+demos <- read.csv("~/Downloads/May-I-Grab-Your-Attention-Manuscript-main/Manuscript Materials/1 Data Files/final_demographics.csv")
 ```
 
 ### Demographic Calculations:
